// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match addition snapshot 1`] = `
Object {
  "kind": 1,
  "left": Object {
    "kind": 0,
    "value": 1,
  },
  "operator": "+",
  "right": Object {
    "kind": 0,
    "value": 2,
  },
}
`;

exports[`should match chain addition snapshot 1`] = `
Object {
  "kind": 1,
  "left": Object {
    "kind": 1,
    "left": Object {
      "kind": 0,
      "value": 1,
    },
    "operator": "+",
    "right": Object {
      "kind": 0,
      "value": 2,
    },
  },
  "operator": "-",
  "right": Object {
    "kind": 0,
    "value": 2,
  },
}
`;

exports[`should match division snapshot 1`] = `
Object {
  "kind": 1,
  "left": Object {
    "kind": 0,
    "value": 1,
  },
  "operator": "/",
  "right": Object {
    "kind": 0,
    "value": 2,
  },
}
`;

exports[`should match multiplication and addition snapshot 1`] = `
Object {
  "kind": 1,
  "left": Object {
    "kind": 0,
    "value": 1,
  },
  "operator": "+",
  "right": Object {
    "kind": 1,
    "left": Object {
      "kind": 0,
      "value": 2,
    },
    "operator": "*",
    "right": Object {
      "kind": 0,
      "value": 2,
    },
  },
}
`;

exports[`should match multiplication snapshot 1`] = `
Object {
  "kind": 1,
  "left": Object {
    "kind": 0,
    "value": 1,
  },
  "operator": "*",
  "right": Object {
    "kind": 0,
    "value": 2,
  },
}
`;

exports[`should match substraction snapshot 1`] = `
Object {
  "kind": 1,
  "left": Object {
    "kind": 0,
    "value": 1,
  },
  "operator": "-",
  "right": Object {
    "kind": 0,
    "value": 2,
  },
}
`;
